Working on data cleaning

--- a/code/01-data-cleaning.ipynb
+++ b/code/01-data-cleaning.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "e0c32a08-c329-4cec-a07d-e886548858f8",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "fce9054b-49f9-45b3-bc9b-cbb701b8648e",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "22e79c88-c381-4f45-96ab-1d19a6329a7c",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "      dtype='object', length=134)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "57a86f6e-0346-4dd4-9701-e6b11921c800",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "False"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "b8debee1-c477-400c-8142-a12349805ca1",
    "metadata": {},
    "outputs": [
@@ -1464,7 +1464,7 @@
        "[40 rows x 134 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1475,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "9d2a1668-79e6-44ee-97d3-4217213266f1",
    "metadata": {},
    "outputs": [
@@ -2787,7 +2787,7 @@
        "[40 rows x 134 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2798,7 +2798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "313be4e0-8700-46d2-a28b-9fec06b724e6",
    "metadata": {},
    "outputs": [],
@@ -2807,9 +2807,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "07ff5247-6b58-4c9b-8308-bc7f605b609e",
+   "metadata": {},
+   "source": [
+    "The only way I know how to filter this data down in terms of features available is to create a list of features to keep. Here is the list of features I will keep in this dataset for later use - note that I will be keeping `id` just so I can cross-reference it with the initial dataset and `SQLite` database:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f62b1f64-479b-4ad9-a7bd-ebd6b86a8ab7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = ['id', 'Scientific_Name_x', 'Category', 'Family', 'Growth_Habit', 'Native_Status',\n",
+    "           'Active_Growth_Period', 'Fall_Conspicuous', 'Fire_Resistance', 'Flower_Color',\n",
+    "           'Flower_Conspicuous', 'Fruit_Conspicuous', 'Growth_Rate', 'Lifespan', 'Toxicity',\n",
+    "           'Drought_Tolerance', 'Hedge_Tolerance', 'Moisture_Use', 'pH_Minimum', 'pH_Maximum',\n",
+    "           'Salinity_Tolerance', 'Shade_Tolerance', 'Temperature_Minimum_F', 'Bloom_Period']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "00cf1a2f-9ac7-41eb-ad32-fb6efe09a843",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[features]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c701b4ab-b053-4863-b73e-f72cf9bb540a",
+   "metadata": {},
+   "source": [
+    "Now let's begin the process of one-hot encoding all of the categorical features and scaling all of the ordinal features. Most of the features listed above fall into either one of these categories. I will first separate these features by categorical, ordinal, or nominal:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2bb3e4e4-1fd6-4a3b-a2cc-e09f02922e9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_features = ['Category', 'Family', 'Growth_Habit', 'Native_Status',\n",
+    "           'Active_Growth_Period', 'Fall_Conspicuous', 'Flower_Color',\n",
+    "           'Flower_Conspicuous', 'Fruit_Conspicuous', 'Bloom_Period']\n",
+    "\n",
+    "ordinal_features = ['Fire_Resistance', 'Toxicity', 'Drought_Tolerance', 'Hedge_Tolerance',\n",
+    "                   'Moisture_Use', 'Salinity_Tolerance', 'Shade_Tolerance']\n",
+    "\n",
+    "numerical_features = ['id', 'Scientific_Name_x', 'pH_Minimum', 'pH_Maximum', 'Growth_Rate', 'Lifespan',\n",
+    "                      'Temperature_Minimum_F']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c5e0183-4780-45fb-8527-83de0df55617",
+   "id": "9902f733-e1dc-4a6b-bc46-f12138d543c7",
    "metadata": {},
    "outputs": [],
    "source": []
