Finished data cleaning for now

--- a/code/01-data-cleaning.ipynb
+++ b/code/01-data-cleaning.ipynb
@@ -2816,7 +2816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "f62b1f64-479b-4ad9-a7bd-ebd6b86a8ab7",
    "metadata": {},
    "outputs": [],
@@ -2830,7 +2830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "00cf1a2f-9ac7-41eb-ad32-fb6efe09a843",
    "metadata": {},
    "outputs": [],
@@ -2848,29 +2848,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "2bb3e4e4-1fd6-4a3b-a2cc-e09f02922e9c",
    "metadata": {},
    "outputs": [],
    "source": [
     "categorical_features = ['Category', 'Family', 'Growth_Habit', 'Native_Status',\n",
     "           'Active_Growth_Period', 'Fall_Conspicuous', 'Flower_Color',\n",
-    "           'Flower_Conspicuous', 'Fruit_Conspicuous', 'Bloom_Period']\n",
+    "           'Flower_Conspicuous', 'Fruit_Conspicuous', 'Bloom_Period', 'Fire_Resistance']\n",
     "\n",
-    "ordinal_features = ['Fire_Resistance', 'Toxicity', 'Drought_Tolerance', 'Hedge_Tolerance',\n",
+    "ordinal_features = ['Toxicity', 'Drought_Tolerance', 'Hedge_Tolerance',\n",
     "                   'Moisture_Use', 'Salinity_Tolerance', 'Shade_Tolerance']\n",
     "\n",
-    "numerical_features = ['id', 'Scientific_Name_x', 'pH_Minimum', 'pH_Maximum', 'Growth_Rate', 'Lifespan',\n",
+    "other_features = ['id', 'Scientific_Name_x', 'pH_Minimum', 'pH_Maximum', 'Growth_Rate', 'Lifespan',\n",
     "                      'Temperature_Minimum_F']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be3c9dd5-1f4b-48f8-81c9-b1054ab190fb",
+   "metadata": {},
+   "source": [
+    "I pulled the following function from [this Kaggle submission.](https://www.kaggle.com/taolearnstolearn/a-single-pipeline-with-lasso-regression) This will allow me to create a dictionary of numeric values to map to the unique strings contained in each feature."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "52e0150d-42e7-4e72-a03a-83a010af891c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Category ['Gymnosperm' 'Dicot' 'Monocot' '' 'Fern' 'Horsetail']\n",
+      "Family ['Pinaceae' 'Caprifoliaceae' 'Acoraceae' 'Fabaceae' 'Ranunculaceae'\n",
+      " 'Aceraceae' 'Poaceae' 'Asteraceae' 'Euphorbiaceae' 'Rosaceae'\n",
+      " 'Hippocastanaceae' 'Lamiaceae' 'Agavaceae' 'Simaroubaceae' 'Liliaceae' ''\n",
+      " 'Alismataceae' 'Betulaceae' 'Vitaceae' 'Boraginaceae' 'Acanthaceae'\n",
+      " 'Ericaceae' 'Brassicaceae' 'Plumbaginaceae' 'Araliaceae' 'Papaveraceae'\n",
+      " 'Araceae' 'Asclepiadaceae' 'Annonaceae' 'Chenopodiaceae' 'Verbenaceae'\n",
+      " 'Bromeliaceae' 'Cyperaceae' 'Campanulaceae' 'Cabombaceae' 'Juglandaceae'\n",
+      " 'Fagaceae' 'Scrophulariaceae' 'Clusiaceae' 'Bignoniaceae' 'Berberidaceae'\n",
+      " 'Rhamnaceae' 'Ulmaceae' 'Celastraceae' 'Dicksoniaceae' 'Clethraceae'\n",
+      " 'Portulacaceae' 'Cornaceae' 'Fumariaceae' 'Myricaceae' 'Cucurbitaceae'\n",
+      " 'Primulaceae' 'Elaeagnaceae' 'Onagraceae' 'Ephedraceae' 'Equisetaceae'\n",
+      " 'Hydrophyllaceae' 'Polygonaceae' 'Hydrangeaceae' 'Cactaceae'\n",
+      " 'Fouquieriaceae' 'Oleaceae' 'Sterculiaceae' 'Rubiaceae' 'Garryaceae'\n",
+      " 'Gentianaceae' 'Geraniaceae' 'Hamamelidaceae' 'Saxifragaceae' 'Apiaceae'\n",
+      " 'Malvaceae' 'Cistaceae' 'Aquifoliaceae' 'Polemoniaceae' 'Iridaceae'\n",
+      " 'Juncaceae' 'Cupressaceae' 'Krameriaceae' 'Lythraceae' 'Zygophyllaceae'\n",
+      " 'Lemnaceae' 'Lauraceae' 'Linaceae' 'Solanaceae' 'Moraceae' 'Magnoliaceae'\n",
+      " 'Nymphaeaceae' 'Buxaceae' 'Phytolaccaceae' 'Plantaginaceae' 'Salicaceae'\n",
+      " 'Punicaceae' 'Anacardiaceae' 'Grossulariaceae' 'Ruppiaceae' 'Sapindaceae'\n",
+      " 'Simmondsiaceae' 'Sapotaceae' 'Smilacaceae' 'Orchidaceae'\n",
+      " 'Caryophyllaceae' 'Taxaceae' 'Rutaceae' 'Tiliaceae' 'Typhaceae'\n",
+      " 'Apocynaceae']\n",
+      "Growth_Habit ['Tree' 'Shrub' 'Forb/herb' 'Tree, Shrub' 'Graminoid'\n",
+      " 'Subshrub, Forb/herb' 'Forb/herb, Shrub, Subshrub'\n",
+      " 'Subshrub, Shrub, Forb/herb' '' 'Subshrub, Shrub' 'Vine'\n",
+      " 'Vine, Forb/herb' 'Subshrub, Shrub, Graminoid' 'Subshrub'\n",
+      " 'Tree, Shrub, Vine' 'Shrub, Subshrub' 'Forb/herb, Subshrub' 'Shrub, Tree'\n",
+      " 'Tree, Subshrub, Shrub' 'Vine, Subshrub' 'Shrub, Vine']\n",
+      "Native_Status ['L48 (N), CAN (N), SPM (N)' 'L48 (N)' 'L48 (N), CAN (N)' 'L48 (I)'\n",
+      " 'L48 (N), AK (N), CAN (N)' 'L48 (I), CAN (I)' 'L48 (N), AK (I?), CAN (N)'\n",
+      " 'L48 (I), HI (I)' 'L48 (NI), AK (N), HI (I), CAN (NI), GL (N), SPM (NI)'\n",
+      " 'L48 (N), AK (N), CAN (N), GL (N), SPM (N)' 'L48 (N), CAN (I)'\n",
+      " 'L48 (N), HI (I), CAN (W), GL (I), SPM (W)'\n",
+      " 'L48 (I), AK (I), HI (I), CAN (I), GL (I), SPM (I)'\n",
+      " 'L48 (I), AK (I), CAN (I), GL (I)' 'L48 (N), PR (N), CAN (N)'\n",
+      " 'L48 (I), HI (I), CAN (I)' 'L48 (N), AK (N), CAN (N), GL (N)' ''\n",
+      " 'L48 (I), CAN (W)' 'L48 (N), AK (N), CAN (N), SPM (N)' 'L48 (I), AK (I)'\n",
+      " 'L48 (I), AK (I), CAN (I), GL (I), SPM (I)' 'L48 (N), AK (I), CAN (N)'\n",
+      " 'L48 (N), HI (I), PR (N), VI (I)' 'L48 (N), PR (N), VI (N)'\n",
+      " 'L48 (N), HI (I), PR (N), CAN (N)' 'L48 (I), HI (I), PR (I), VI (I)'\n",
+      " 'L48 (I), AK (I), HI (I), CAN (I)' 'AK (N), CAN (N), GL (N)'\n",
+      " 'L48 (N), HI (I)'\n",
+      " 'L48 (I), AK (I), HI (I), PR (I), CAN (W), GL (W), SPM (W)'\n",
+      " 'L48 (N), AK (I), CAN (I)' 'L48 (N), HI (I), CAN (N)' 'PR (N)'\n",
+      " 'L48 (I), AK (I), CAN (I)' 'L48 (NI), AK (NI), CAN (NI), GL (I), SPM (I)'\n",
+      " 'L48 (I), AK (I), HI (I), PR (I), VI (I), CAN (I)'\n",
+      " 'L48 (I), PR (N), VI (I)' 'L48 (N), AK (N), HI (N), CAN (N), SPM (N)'\n",
+      " 'L48 (I), PR (I)' 'HI (I), PR (I)' 'L48 (N), CAN (N), GL (N), SPM (N)'\n",
+      " 'L48 (N), AK (N), CAN (NI), GL (N), SPM (NI)' 'L48 (I), HI (I), VI (I)'\n",
+      " 'L48 (N), AK (I), CAN (N), SPM (W)' 'HI (N)' 'L48 (I), CAN (I), SPM (I)'\n",
+      " 'L48 (I), HI (I), PR (I)'\n",
+      " 'L48 (I), HI (I), PR (I), VI (I), CAN (W), SPM (W)'\n",
+      " 'L48 (I), AK (I), HI (I), PR (I), CAN (I), GL (I), SPM (I)'\n",
+      " 'AK (I), CAN (N)' 'L48 (N), AK (I), HI (I), CAN (I)'\n",
+      " 'L48 (NI), AK (NI), HI (I), CAN (NI), GL (NI), SPM (N)'\n",
+      " 'L48 (N), AK (I), HI (I), PR (I), CAN (I), SPM (I)'\n",
+      " 'L48 (N), HI (N), PR (N), VI (N)'\n",
+      " 'L48 (N), HI (N), PR (N), VI (N), CAN (N)' 'CAN (I)'\n",
+      " 'L48 (N), AK (N), HI (I), CAN (N)'\n",
+      " 'L48 (I), AK (I), HI (I), CAN (W), GL (W)'\n",
+      " 'L48 (N), AK (N), HI (I), CAN (N), SPM (N)' 'L48 (N), PR (N)'\n",
+      " 'L48 (N), AK (N), HI (I), PR (N), CAN (N), SPM (N)'\n",
+      " 'L48 (I), HI (I), PR (I), VI (I), CAN (I)' 'L48 (I), CAN (I), GL (I)'\n",
+      " 'L48 (I), AK (I), HI (I), CAN (I), SPM (I)' 'L48 (I), PR (I), CAN (I)'\n",
+      " 'L48 (I), HI (I), PR (I), CAN (I)' 'L48 (N), HI (I), PR (N)'\n",
+      " 'L48 (N), HI (I), PR (N), VI (N)' 'L48 (N), AK (I), CAN (N), SPM (I)'\n",
+      " 'L48 (N), CAN (NI)'\n",
+      " 'L48 (I), AK (I), HI (I), PR (I), VI (I), CAN (I), GL (I), SPM (I)'\n",
+      " 'L48 (N), CAN (N), GL (N)' 'L48 (N), AK (N), CAN (N), GL (I), SPM (N)'\n",
+      " 'L48 (NI), AK (NI), HI (I), PR (I), CAN (NI), GL (N), SPM (I)'\n",
+      " 'L48 (N), HI (I), VI (I)' 'L48 (N), AK (I), CAN (N), SPM (N)'\n",
+      " 'L48 (I), PR (I), VI (I)' 'L48 (I), CAN (N)'\n",
+      " 'L48 (I), AK (I), CAN (I), SPM (I)'\n",
+      " 'L48 (N), AK (N), HI (N), PR (N), VI (N), CAN (N), SPM (N)'\n",
+      " 'L48 (N), HI (I), PR (N), VI (I), CAN (N)' 'AK (N), CAN (N)'\n",
+      " 'L48 (I), AK (I), CAN (W), GL (W)' 'L48 (I), VI (I), CAN (W)'\n",
+      " 'L48 (I), HI (I), CAN (I), SPM (W)' 'L48 (N), PR (I)'\n",
+      " 'L48 (N), PR (I), CAN (N)' 'L48 (N), PR (N), VI (N), CAN (N)'\n",
+      " 'L48 (N), AK (N?), CAN (N)' 'L48 (NI), CAN (N)' 'PR (I)'\n",
+      " 'L48 (NI), CAN (NI), SPM (N)']\n",
+      "Active_Growth_Period ['Spring and Summer' 'Spring, Summer, Fall' 'Spring'\n",
+      " 'Fall, Winter and Spring' 'Spring and Fall' 'Summer' 'Year Round' ''\n",
+      " 'Summer and Fall']\n",
+      "Fall_Conspicuous ['No' 'Yes']\n",
+      "Flower_Color ['Yellow' 'Red' 'Purple' '' 'Brown' 'Blue' 'Green' 'White' 'Orange']\n",
+      "Flower_Conspicuous ['No' 'Yes']\n",
+      "Fruit_Conspicuous ['No' 'Yes']\n",
+      "Bloom_Period ['Mid Summer' 'Late Spring' 'Mid Spring' 'Late Summer' 'Early Summer'\n",
+      " 'Summer' 'Early Spring' 'Spring' 'Fall' 'Late Winter' '' 'Winter'\n",
+      " 'Indeterminate']\n",
+      "Fire_Resistance ['No' 'Yes']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print out unique keys for each categorical feature\n",
+    "for feature in categorical_features:\n",
+    "    print(feature, df[feature].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8a52752f-ad2f-4d91-a68e-938aa5984de3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Toxicity ['None' 'Slight' 'Moderate' 'Severe' '']\n",
+      "Drought_Tolerance ['Low' 'Medium' 'None' 'High']\n",
+      "Hedge_Tolerance ['Low' 'High' 'None' 'Medium' '']\n",
+      "Moisture_Use ['Medium' 'Low' 'High']\n",
+      "Salinity_Tolerance ['None' 'Low' 'Medium' 'High']\n",
+      "Shade_Tolerance ['Tolerant' 'Intermediate' 'Intolerant']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print out unique keys for each ordinal feature\n",
+    "for feature in ordinal_features:\n",
+    "    print(feature, df[feature].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e8d8d6db-4305-4011-aa81-db7f0e6d353c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dictionary to map the ordinal features\n",
+    "ord_dict = {\n",
+    "   # Toxicity\n",
+    "   'None':0, 'Slight':1, 'Moderate':2, 'Severe':3,\n",
+    "    \n",
+    "   # Tolerances other than shade tolerance\n",
+    "   'None':0, 'Low':1, 'Medium':2, 'High':3,\n",
+    "\n",
+    "   # Shade Tolerance\n",
+    "   'Intolerant':0, 'Intermediate':1, 'Tolerant':2,\n",
+    "    \n",
+    "   # Moisture Use\n",
+    "   'Low':0, 'Medium':1, 'High':2\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9902f733-e1dc-4a6b-bc46-f12138d543c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Map the ordinal features to numeric values to retain their ordinality\n",
+    "def ordinal_mapper(df, ord_features):\n",
+    "    # Fill empty strings with 0\n",
+    "    df[ord_features] = df[ord_features].replace('', -1)\n",
+    "    \n",
+    "    # Get values from the dictionary using the get method\n",
+    "    df = df.applymap(lambda x: ord_dict.get(x,x))\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5d091f54-3cb3-4b79-a6ec-a196cb1e1ace",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = ordinal_mapper(df, ordinal_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "08cf219b-63f9-468e-9564-26f500982215",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now dummify the nominal columns\n",
+    "df = pd.get_dummies(df, columns=categorical_features, drop_first=True, dummy_na=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9902f733-e1dc-4a6b-bc46-f12138d543c7",
+   "id": "b7f1f07a-2ded-4849-9b3a-cc575ca4f754",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save this version o "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f65da53-c894-4eaa-9e64-a5c3837e5645",
+   "metadata": {},
+   "source": [
+    "With the data cleaned and saved, we can move onto the modeling portion"
+   ]
   }
  ],
  "metadata": {
