Fixed issue with incorrectly labeled features

--- a/code/01-data-cleaning.ipynb
+++ b/code/01-data-cleaning.ipynb
@@ -2858,9 +2858,9 @@
     "           'Flower_Conspicuous', 'Fruit_Conspicuous', 'Bloom_Period', 'Fire_Resistance']\n",
     "\n",
     "ordinal_features = ['Toxicity', 'Drought_Tolerance', 'Hedge_Tolerance',\n",
-    "                   'Moisture_Use', 'Salinity_Tolerance', 'Shade_Tolerance']\n",
+    "                   'Moisture_Use', 'Salinity_Tolerance', 'Shade_Tolerance', 'Growth_Rate', 'Lifespan']\n",
     "\n",
-    "other_features = ['id', 'Scientific_Name_x', 'pH_Minimum', 'pH_Maximum', 'Growth_Rate', 'Lifespan',\n",
+    "other_features = ['id', 'Scientific_Name_x', 'pH_Minimum', 'pH_Maximum',\n",
     "                      'Temperature_Minimum_F']"
    ]
   },
@@ -2998,7 +2998,9 @@
       "Hedge_Tolerance ['Low' 'High' 'None' 'Medium' '']\n",
       "Moisture_Use ['Medium' 'Low' 'High']\n",
       "Salinity_Tolerance ['None' 'Low' 'Medium' 'High']\n",
-      "Shade_Tolerance ['Tolerant' 'Intermediate' 'Intolerant']\n"
+      "Shade_Tolerance ['Tolerant' 'Intermediate' 'Intolerant']\n",
+      "Growth_Rate ['Slow' 'Moderate' 'Rapid' '']\n",
+      "Lifespan ['Short' 'Long' 'Moderate' '']\n"
      ]
     }
    ],
@@ -3026,8 +3028,8 @@
     "   # Shade Tolerance\n",
     "   'Intolerant':0, 'Intermediate':1, 'Tolerant':2,\n",
     "    \n",
-    "   # Moisture Use\n",
-    "   'Low':0, 'Medium':1, 'High':2\n",
+    "   # Unique keys for Growth Rate and Lifespan\n",
+    "   'Slow':1, 'Short':1, 'Long':3, 'Rapid':3\n",
     "}"
    ]
   },
@@ -3071,12 +3073,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "b7f1f07a-2ded-4849-9b3a-cc575ca4f754",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save this version o "
+    "# Save this version of the data as well\n",
+    "df.to_csv('../datasets/cleaned-data.csv',index=False)"
    ]
   },
   {
