Added cleaner py file plus minor updates

--- a/code/01-data-cleaning.ipynb
+++ b/code/01-data-cleaning.ipynb
@@ -3087,7 +3087,7 @@
    "id": "2f65da53-c894-4eaa-9e64-a5c3837e5645",
    "metadata": {},
    "source": [
-    "With the data cleaned and saved, we can move onto the modeling portion"
+    "With the data cleaned and saved, we can move onto the modeling portion, which can be found in [this notebook](02-modeling.ipynb). Also, if you would like to get a more condensed version of this cleaning code, you can find it [here.](cleaner.py)"
    ]
   }
  ],
