--- a/code/02-modeling.ipynb
+++ b/code/02-modeling.ipynb
@@ -18,11 +18,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ca7aaf4b-2264-4ddf-b7ac-6f87d538e33f",
+   "execution_count": 1,
+   "id": "46d26407-965e-4da8-abd1-35859741f962",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Imports\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import silhouette_score\n",
+    "from sklearn.cluster import KMeans, DBSCAN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03fe30ce-9511-46bc-9bf3-b0ed99e0d6c4",
+   "metadata": {},
+   "source": [
+    "#### DBSCAN\n",
+    "\n",
+    "Clustering plays an important part in this project - it will provide the basis for the suggestion engine later. To create the best possible clustering model, I will need to have a rough estimate of the number of datapoint clusters. I don't intuitively know the number of clusters necesary since the data has a high degree of dimensionality, so to estimate it I will utilize `DBSCAN` clustering:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6044966a-2ea2-42e8-ae66-d24ebbd2a2c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load in the data and scale it\n",
+    "df = pd.read_csv('../datasets/cleaned-data.csv')\n",
+    "df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bebfba7c-a0e5-4552-b9c9-aa5091eeeb28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop(columns=['id', 'Scientific_Name_x'])\n",
+    "species = df[['id', 'Scientific_Name_x']]\n",
+    "\n",
+    "sc = StandardScaler()\n",
+    "\n",
+    "X_sc = sc.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "bd52a341-4ada-4767-9b47-ccde1dd39d2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.isnull().sum().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "cdce675d-d55a-4695-b306-ad45c078d65c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DBSCAN(eps=10, min_samples=2)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fit a DBSCAN model\n",
+    "db = DBSCAN(eps=10, min_samples=2)\n",
+    "db.fit(X_sc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d2129b15-4465-41bf-a43b-2b1bdbe823e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the number of clusters and look at the silouette score\n",
+    "labels = db.labels_\n",
+    "n_clusters_ = len(set(labels)) - (1 if -1 in labels else 0)\n",
+    "n_clusters_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "91a458cd-b1d3-4584-b440-d4feb3c48035",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1460248480136029"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "silhouette_score(X_sc, db.labels_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80286c7c-d196-4b6a-8288-6605d93cf944",
+   "metadata": {},
+   "source": [
+    "This score is not great, but that doesn't particularly matter, as this model was instead meant to give a best estimate on the number of clusters needed to represent the data well. The \n",
+    "\n",
+    "#### KMeans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c5a5379-cc94-422c-a5bd-b71181f408b6",
+   "metadata": {},
+   "source": [
+    "To see if this si"
+   ]
   }
  ],
  "metadata": {
