Working on clustering models

--- a/code/02-modeling.ipynb
+++ b/code/02-modeling.ipynb
@@ -164,7 +164,7 @@
    "id": "80286c7c-d196-4b6a-8288-6605d93cf944",
    "metadata": {},
    "source": [
-    "This score is not great, but that doesn't particularly matter, as this model was instead meant to give a best estimate on the number of clusters needed to represent the data well. The \n",
+    "This score is not great, but that doesn't particularly matter, as this model was instead meant to give a best estimate on the number of clusters needed to represent the data well. The `n_clusters_` of about 70 found here will be indispensible for testing other clustering models, such as KMeans.\n",
     "\n",
     "#### KMeans"
    ]
@@ -174,8 +174,59 @@
    "id": "2c5a5379-cc94-422c-a5bd-b71181f408b6",
    "metadata": {},
    "source": [
-    "To see if this si"
+    "To see if this silouette score can be improved upon, let's try to use a KMeans clustering model:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "92cb2458-b9fb-43d8-89b2-da7876430c01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KMeans(n_clusters=70, random_state=42)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "km = KMeans(n_clusters=70, random_state=42)\n",
+    "km.fit(X_sc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "0fc5bea6-dc63-410c-be3a-ee3c76f77fc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.049270928938044745"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "silhouette_score(X_sc, km.labels_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38f30e84-23bf-48f3-97f7-f453f40eaaba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
